[tool.poetry]
name = "congress"
version = "0.1.0"
description = ""
authors = ["Maxwell Margenot <max.margenot@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
beautifulsoup4 = "^4.13.3"
cssselect = "^1.2.0"
iso8601 = "^2.1.0"
lxml = "^5.3.1"
mechanize = "^0.4.10"
mock = "^5.2.0"
rtyaml = "^1.0.0"
python-dateutil = "^2.9.0.post0"
pytz = "^2025.1"
pyyaml = "^6.0.2"
scrapelib = "^2.3.0"
xmltodict = "^0.14.2"
packaging = "^24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
